syntax = "proto3";

package grpc.spring.boot;

option java_multiple_files = true;

message Employee {
  int32 employee_id = 1;
  string name = 2;
  string designation = 3;
}
service EmployeeService {
  rpc getEmployee(Employee) returns(Employee) {}
}